spark fragment render working

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
     "plugins": [
         "@babel/plugin-syntax-jsx",
-        ["@babel/plugin-transform-react-jsx", { "pragma": "Spark.createElement" }]
+        ["@babel/plugin-transform-react-jsx", { 
+            "pragma": "Spark.createElement",
+        }]
     ]
 }
