add external props and tests

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
+    "presets": ["@babel/env"],
     "plugins": [
         "@babel/plugin-syntax-jsx",
         ["@babel/plugin-transform-react-jsx", { 
