--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "spark-jsx",
   "version": "1.0.0",
-  "main": "lib/bundle.js",
+  "main": "lib/bundle.iife.js",
+  "module": "lib/bundle.esm.js",
+  "browser": "lib/bundle.iife.js",
   "repository": "git@github.com:Somo86/JSX_DOM.git",
-  "author": "albertsomoza <a.somo86@gmail.com>",
+  "author": "AlbertSomoza <a.somo86@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "rollup src/index.js --file lib/bundle.js --format umd --name sparkJSX",
-    "test": "jest --no-cache --config jest.config.json",
+    "build": "rollup --config",
+    "test": "jest --no-cache --config jest.config.json --coverage",
     "test:watch": "jest --watch --no-cache --config jest.config.json"
   },
   "devDependencies": {
