--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "@babel/preset-env": "^7.5.5",
     "babel-jest": "^24.8.0",
     "babel-polyfill": "^6.26.0",
+    "husky": "^3.0.3",
     "jest": "^24.8.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
